Añadido createdAt a Product y endpoint para recuperar los productos añadidos recientemente